# demo-todo-python

./: .dockerignore  .env.example  .gitignore  DAT.md  DJANGO.md  Dockerfile  ROUTES.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml
app/: auth.py  config.py  database.py  dependencies.py  main.py
app/models/: todo.py  user.py
app/routers/: auth.py  todos.py  users.py
app/schemas/: __init__.py  todo.py  user.py
apps/todos/: admin.py  apps.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  signals.py  urls.py  views.py
apps/todos/management/commands/: cleanup_completed.py  seed_data.py
apps/todos/migrations/: 0001_initial.py  0002_initial.py
apps/todos/tests/: factories.py  test_views.py
apps/users/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/tests/: factories.py  test_views.py
config/: urls.py
config/settings/: base.py  development.py  production.py
middleware/: request_logger.py
