[project]
name = "todo-app"
version = "0.1.0"
description = "Django REST Framework Todo App — educational DRF reference project"
authors = [{ name = "Rami GB", email = "77512307+rami-pro@users.noreply.github.com" }]
requires-python = ">=3.12,<4.0"
dependencies = [
    "django>=5.1,<6.0",
    "djangorestframework>=3.15,<4.0",
    "djangorestframework-simplejwt>=5.3,<6.0",
    "django-filter>=24.3",
    "drf-spectacular>=0.27",
    "django-environ>=0.11",
    "psycopg2-binary>=2.9",
    "pillow>=10.4",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-django>=4.9",
    "factory-boy>=3.3",
    "black>=24.0",
    "isort>=5.13",
    "ruff>=0.6",
    "mypy>=1.11",
    "django-stubs[compatible-mypy]>=5.1",
    "djangorestframework-stubs[compatible-mypy]>=3.15",
]

# ---------------------------------------------------------------------------
# Tool configs
# ---------------------------------------------------------------------------

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
known_django = ["django"]
known_drf = ["rest_framework", "rest_framework_simplejwt", "django_filters", "drf_spectacular"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "DRF", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = true
ignore_missing_imports = true
exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = ["factory.*", "environ.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings.development"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
